--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -30,7 +30,7 @@
       <input type="number" name="cart" placeholder="number cart" />
     </label>
     <br />
-    <input type="submit" value="Login" />
+    <input type="submit" value="Register" />
   </form>
 
   <p>Already have account? <a href="/login">Login!</a></p>
