--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -25,10 +25,10 @@
       <input type="password" name="password" placeholder="********" value="" />
     </label>
     <br />
-    <label>
+    {{!-- <label>
       Cart:
       <input type="number" name="cart" placeholder="number cart" />
-    </label>
+    </label> --}}
     <br />
     <input type="submit" value="Register" />
   </form>
